Finalised styles: emi and ismej and edited the README file

--- a/env_micro_biblatex_EXAMPLE.bib
+++ b/env_micro_biblatex_EXAMPLE.bib
@@ -1,4 +1,6 @@
-﻿@comment{x-kbibtex-personnameformatting=<%f ><%l><, %s>} 0_64AAT6GG 0_PRTH8WK8
+@comment{x-kbibtex-personnameformatting=<%f ><%l><, %s>}
+
+0_64AAT6GG 0_PRTH8WK8
 
 0_Q8724NCR 0_ZMJJFMVZ 0_JUESQSNB 0_RTDQCHI2
 
@@ -27,7 +29,7 @@
 	editor = {F J {de Bruijn} and J D {Doe}},
 	file = {Book chapter.pdf:/home/angel/Documents/Literature/Zotero/storage/2KAN7E9V/Book chapter.pdf:application/pdf;Sklarz et al\_2011\_.pdf:/home/angel/Documents/Literature/Zotero/storage/84AT8TNS/Sklarz et al\_2011\_.pdf:application/pdf;Sklarz et al\_2011\_.pdf:/home/angel/Documents/Literature/Zotero/storage/7GTV4IQN/Sklarz et al\_2011\_.pdf:application/pdf},
 	isbn = {978-0-470-64479-9},
-	language = {English},
+	language = english,
 	pages = {59--66},
 	publisher = {Wiley-Blackwell},
 	shorttitle = {Handbook of Molecular Microbial Ecology I},
@@ -248,38 +250,39 @@
 	year = {2010}
 }
 
-
 @article{xu2012dielcycle,
-	title = {Diel cycle of methanogen {mcrA} transcripts in rice rhizosphere},
-	volume = {4},
-	copyright = {{\textcopyright} 2012 Society for Applied Microbiology and Blackwell Publishing Ltd},
-	issn = {1758-2229},
-	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1758-2229.2012.00392.x/abstract},
-	doi = {10.1111/j.1758-2229.2012.00392.x},
 	abstract = {Methanogens are known to inhabit not only the anaerobic bulk soil but also the rhizosphere of rice plants. The release of root exudates, a major carbon source for {CH4} production in the rhizosphere, is closely coupled to plant photosynthesis. In the present study we hypothesized that the diel cycle of plant photosynthetic activity may shape the structure and function of methanogens in the rhizosphere of rice. We performed a field experiment to determine the diel dynamics of methanogen {mcrA} and their transcripts in the rhizosphere and bulk soil. The chemistry of {NH4+}, {NO3-}, {SO42-} and {Fe(II)} in the rice rhizosphere remained constant over a diel sampling. The {mcrA} copy number and their transcripts were greater in the rice rhizosphere compared with the bulk soil, indicating the enhanced activity of methanogens in the rhizosphere. The hydrogenotrophic Methanomicrobiales in particular increased in the rhizosphere whereas Methanosarcinaceae were more abundant in the bulk soil. Both the phylogenetic affiliation and copy numbers of methanogen {mcrA} in the rice rhizosphere did not display diel dynamics. The {mcrA} transcripts, however, significantly increased in the night compared with the daytime. The diel pattern of physical factors like temperature appeared not to affect the methanogen dynamics. The response of {mcrA} transcripts is probably due to the plant attributes, which release less O2 from roots in the night and hence stimulate the methanogen gene transcription and activity compared with the daytime.},
-	language = {en},
-	number = {6},
-	urldate = {2012-11-22},
-	journal = {Environmental Microbiology Reports},
-	author = {Xu, Yuan and Ma, Ke and Huang, Shiwen and Liu, Lianmeng and Lu, Yahai},
-	year = {2012},
-	pages = {655{\textendash}663},
-	file = {Xu et al_2012_Environ Microbiol Rep.pdf:/home/angel/Documents/Literature/Zotero/storage/G36WMCKD/Xu et al_2012_Environ Microbiol Rep.pdf:application/pdf}
-}
-@article{liu2012microbial,
-	title = {Microbial community composition controls the effects of climate change on methane emission from rice paddies},
-	volume = {4},
+	author = {Yuan Xu and Ke Ma and Shiwen Huang and Lianmeng Liu and Yahai Lu},
 	copyright = {{\textcopyright} 2012 Society for Applied Microbiology and Blackwell Publishing Ltd},
+	doi = {10.1111/j.1758-2229.2012.00392.x},
+	file = {Xu et al\_2012\_Environ Microbiol Rep.pdf:/home/angel/Documents/Literature/Zotero/storage/G36WMCKD/Xu et al\_2012\_Environ Microbiol Rep.pdf:application/pdf},
 	issn = {1758-2229},
-	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1758-2229.2012.00391.x/abstract},
-	doi = {10.1111/j.1758-2229.2012.00391.x},
-	abstract = {Rice paddies are one of the most important sources of {CH4} emission from the terrestrial ecosystem. A Free-air {CO2} Enrichment {(FACE)} experiment, which included a soil warming treatment, was conducted in a rice paddy at Shizukuishi, Japan. In this study, the changes in {CH4} emission from a rice paddy, caused by global climate change, were explored in relation to the structural changes that have occurred in the methanogenic archaeal communities found in the soil and roots. The composition of the archaeal community was examined by terminal restriction fragment length polymorphism {(T-RFLP)} using the {16S} {rRNA} gene, while its abundance was measured by real-time {PCR} using the methyl coenzyme M reductase {(mcrA)} gene. The archaeal community in the roots showed considerable change, characterized by the dominance of hydrogenotrophic methanogens and a corresponding decrease in acetoclastic methanogens. Seasonal changes in {CH4} flux were closely related to the changes in methanogen abundance in the roots. Elevated {CO2} caused an increase in root mass, which increased the abundance of methanogens leading to a rise in {CH4} emissions. However, soil warming stimulated {CH4} emissions by increasing {CH4} production per individual methanogen. These results demonstrated that climate warming stimulates {CH4} emission in a rice paddy by altering the abundance and activity of methanogenic archaea in the roots.},
+	journal = {Environmental Microbiology Reports},
 	language = {en},
 	number = {6},
+	pages = {655{\textendash}663},
+	title = {{Diel cycle of methanogen {mcrA} transcripts in rice rhizosphere}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1758-2229.2012.00392.x/abstract},
 	urldate = {2012-11-22},
-	journal = {Environmental Microbiology Reports},
-	author = {Liu, Guang Cheng and Tokida, Takesi and Matsunami, Toshinori and Nakamura, Hirofumi and Okada, Masumi and Sameshima, Ryoji and Hasegawa, Toshihiro and Sugiyama, Shu-ichi},
-	year = {2012},
-	pages = {648{\textendash}654},
-	file = {Liu et al_2012_Environ Microbiol Rep.pdf:/home/angel/Documents/Literature/Zotero/storage/EZMMPE23/Liu et al_2012_Environ Microbiol Rep.pdf:application/pdf}
+	volume = {4},
+	year = {2012}
 }
+
+@article{liu2012microbial,
+	abstract = {Rice paddies are one of the most important sources of {CH4} emission from the terrestrial ecosystem. A Free-air {CO2} Enrichment {(FACE)} experiment, which included a soil warming treatment, was conducted in a rice paddy at Shizukuishi, Japan. In this study, the changes in {CH4} emission from a rice paddy, caused by global climate change, were explored in relation to the structural changes that have occurred in the methanogenic archaeal communities found in the soil and roots. The composition of the archaeal community was examined by terminal restriction fragment length polymorphism {(T-RFLP)} using the {16S} {rRNA} gene, while its abundance was measured by real-time {PCR} using the methyl coenzyme M reductase {(mcrA)} gene. The archaeal community in the roots showed considerable change, characterized by the dominance of hydrogenotrophic methanogens and a corresponding decrease in acetoclastic methanogens. Seasonal changes in {CH4} flux were closely related to the changes in methanogen abundance in the roots. Elevated {CO2} caused an increase in root mass, which increased the abundance of methanogens leading to a rise in {CH4} emissions. However, soil warming stimulated {CH4} emissions by increasing {CH4} production per individual methanogen. These results demonstrated that climate warming stimulates {CH4} emission in a rice paddy by altering the abundance and activity of methanogenic archaea in the roots.},
+	author = {Guang Cheng Liu and Takesi Tokida and Toshinori Matsunami and Hirofumi Nakamura and Masumi Okada and Ryoji Sameshima and Toshihiro Hasegawa and Shu-ichi Sugiyama},
+	copyright = {{\textcopyright} 2012 Society for Applied Microbiology and Blackwell Publishing Ltd},
+	doi = {10.1111/j.1758-2229.2012.00391.x},
+	file = {Liu et al\_2012\_Environ Microbiol Rep.pdf:/home/angel/Documents/Literature/Zotero/storage/EZMMPE23/Liu et al\_2012\_Environ Microbiol Rep.pdf:application/pdf},
+	issn = {1758-2229},
+	journal = {Environmental Microbiology Reports},
+	language = {en},
+	number = {6},
+	pages = {648{\textendash}654},
+	title = {{Microbial community composition controls the effects of climate change on methane emission from rice paddies}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1758-2229.2012.00391.x/abstract},
+	urldate = {2012-11-22},
+	volume = {4},
+	year = {2012}
+}
+
