Added XeTeX version of the Example

--- a/env_micro_biblatex_EXAMPLE.tex
+++ b/env_micro_biblatex_EXAMPLE.tex
@@ -24,7 +24,7 @@
 
 \makeatletter
 \@ifundefined{date}{}{\date{}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
 %% Document related
 
 % Cancel hyphnation
