--- a/env_micro_biblatex_EXAMPLE.tex
+++ b/env_micro_biblatex_EXAMPLE.tex
@@ -1,5 +1,8 @@
 %% LyX 2.0.5 created this file.  For more info, see http://www.lyx.org/.
 %% Do not edit unless you really know what you are doing.
+
+% Compile using: xelatex -> biber -> xelatex 
+
 \RequirePackage{fix-cm}
 \documentclass[12pt,british]{scrartcl}
 \usepackage{fontspec}
