FEMS ME style added!

--- a/env_micro_biblatex_EXAMPLE.bib
+++ b/env_micro_biblatex_EXAMPLE.bib
@@ -1,4 +1,6 @@
-﻿@comment{x-kbibtex-personnameformatting=<%f ><%l><, %s>} 0_CK5JHQAM
+﻿@comment{x-kbibtex-personnameformatting=<%f ><%l><, %s>} 0_IG28W5ZI
+
+0_CK5JHQAM
 
 0_TRWMM6DW 0_QIT4B987 0_KJEPQBJS 0_VMJFAI33 0_TGT77CAD 0_97VU8TV9 0_Q8724NCR 0_ZMJJFMVZ 0_4SMXEAI9 0_J4RGANPZ 0_XCE7R3DI 0_4AUG4PZJ
 
@@ -47,7 +49,7 @@
 	month = may,
 	number = {9},
 	pages = {2283--2297},
-	title = {{Carbon isotope effects associated with mixed-acid fermentation of saccharides by Clostridium papyrosolvens}},
+	title = {{Carbon isotope effects associated with mixed-acid fermentation of saccharides by \textit{Clostridium papyrosolvens}}},
 	url = {http://www.sciencedirect.com/science/article/B6V66-4JFGFJF-3/2/9b5989328a1cea547a07d9298ae2ebb7},
 	urldate = {2010-07-01},
 	volume = {70},
@@ -125,10 +127,10 @@
 
 @incollection{belnap2003disturbance,
 	address = {Berlin, Germany},
-	author = {J. Belnap and D. Eldridge and J. Belnap and {O.L.} Lange},
+	author = {J. Belnap and D. Eldridge},
 	booktitle = {{Biological Soil Crusts: Structure, Function, and Management}},
+	editor = {J. Belnap and {O.L.} Lange},
 	keywords = {Drylands; Mats; Population dynamics; Soil},
-	note = {150},
 	pages = {363--383},
 	publisher = {Springer-Verlag},
 	series = {{Ecological Studies}},
@@ -161,29 +163,45 @@
 	month = dec,
 	number = {12},
 	pages = {828--840},
-	title = {{Microbial life in the phyllosphere}},
+	title = {{Microbial Life in the Phyllosphere}},
 	url = {http://www.nature.com/nrmicro/journal/v10/n12/full/nrmicro2910.html?WT.ec_id=NRMICRO-201212},
 	urldate = {2012-11-22},
 	volume = {10},
 	year = {2012}
 }
 
-
 @article{oficteru2010combined,
-	title = {Combined niche and neutral effects in a microbial wastewater treatment community},
-	volume = {107},
-	issn = {0027-8424, 1091-6490},
-	url = {http://www.pnas.org/content/107/35/15345},
-	doi = {10.1073/pnas.1000604107},
 	abstract = {It has long been assumed that differences in the relative abundance of taxa in microbial communities reflect differences in environmental conditions. Here we show that in the economically and environmentally important microbial communities in a wastewater treatment plant, the population dynamics are consistent with neutral community assembly, where chance and random immigration play an important and predictable role in shaping the communities. Using dynamic observations, we demonstrate a straightforward calibration of a purely neutral model and a parsimonious method to incorporate environmental influence on the reproduction (or birth) rate of individual taxa. The calibrated model parameters are biologically plausible, with the population turnover and diversity in the heterotrophic community being higher than for the ammonia oxidizing bacteria {(AOB)} and immigration into {AOB} community being relatively higher. When environmental factors were incorporated more of the variance in the observations could be explained but immigration and random reproduction and deaths remained the dominant driver in determining the relative abundance of the common taxa. Consequently we suggest that neutral community models should be the foundation of any description of an open biological system.},
-	language = {en},
-	number = {35},
-	urldate = {2012-11-27},
+	author = {Irina Dana {Ofi{\c t}eru} and Mary Lunn and Thomas P. Curtis and George F. Wells and Craig S. Criddle and Christopher A. Francis and William T. Sloan},
+	doi = {10.1073/pnas.1000604107},
+	file = {Ofi{\c t}eru et al\_2010\_Proc Natl Acad Sci USA.pdf:/home/angel/Documents/Literature/Zotero/storage/3T67TJKR/Ofi{\c t}eru et al\_2010\_Proc Natl Acad Sci USA.pdf:application/pdf},
+	issn = {0027-8424, 1091-6490},
 	journal = {Proceedings of the National Academy of Sciences},
-	author = {Ofi{\c t}eru, Irina Dana and Lunn, Mary and Curtis, Thomas P. and Wells, George F. and Criddle, Craig S. and Francis, Christopher A. and Sloan, William T.},
+	keywords = {Ammonia; Nitrifiers; Population dynamics; {Statistics/Modeling}; {Water/Wastewater}},
+	language = english,
 	month = aug,
-	year = {2010},
-	keywords = {Ammonia, Nitrifiers, Population dynamics, {Statistics/Modeling}, {Water/Wastewater}},
+	number = {35},
 	pages = {15345--15350},
-	file = {Ofi{\c t}eru et al_2010_Proc Natl Acad Sci USA.pdf:/home/angel/Documents/Literature/Zotero/storage/3T67TJKR/Ofi{\c t}eru et al_2010_Proc Natl Acad Sci USA.pdf:application/pdf}
+	title = {{Combined niche and neutral effects in a microbial wastewater treatment community}},
+	url = {http://www.pnas.org/content/107/35/15345},
+	urldate = {2012-11-27},
+	volume = {107},
+	year = {2010}
+}
+
+
+@article{penning2006determination,
+	title = {Determination of isotope fractionation factors and quantification of carbon flow by stable carbon isotope signatures in a methanogenic rice root model system},
+	volume = {4},
+	url = {http://dx.doi.org/10.1111/j.1472-4669.2006.00075.x},
+	doi = {10.1111/j.1472-4669.2006.00075.x},
+	abstract = {Methanogenic processes can be quantified by stable carbon isotopes, if necessary modeling parameters, especially fractionation factors, are known. Anoxically incubated rice roots are a model system with a dynamic microbial community and thus suitable to investigate principal geochemical processes in anoxic natural systems. Here we applied an inhibitor of acetoclastic methanogenesis (methyl fluoride), calculated the thermodynamics of the involved processes, and analyzed the carbon stable isotope signatures of {CO2}, {CH4}, propionate, acetate and the methyl carbon of acetate to characterize the carbon flow during anaerobic degradation of rice roots to the final products {CO2} and {CH4.} Methyl fluoride inhibited acetoclastic methanogenesis and thus allowed to quantify the fractionation factor of {CH4} production from {H2/CO2.} Since our model system was not affected by H2 gradients, the fractionation factor could alternatively be determined from the Gibbs free energies of hydrogenotrophic methanogenesis. The fractionation factor of acetoclastic methanogenesis was also experimentally determined. The data were used for successfully modeling the carbon flow. The model results were in agreement with the measured process data, but were sensitive to even small changes in the fractionation factor of hydrogenotrophic methanogenesis. Our study demonstrates that stable carbon isotope signatures are a proper tool to quantify carbon flow, if fractionation factors are determined precisely.},
+	number = {2},
+	urldate = {2010-07-01},
+	journal = {Geobiology},
+	author = {Penning, H. and Tyler, S. C. and Conrad, R.},
+	year = {2006},
+	keywords = {Methanogenesis, Plants, Soil, Stable isotopes},
+	pages = {109--121},
+	file = {Penning et al_2006_Geobiology.pdf:/home/angel/Documents/Literature/Zotero/storage/5B394TGM/Penning et al_2006_Geobiology.pdf:application/pdf}
 }
