--- a/BIBEMME_EXAMPLE-noCountry.bib
+++ b/BIBEMME_EXAMPLE-noCountry.bib
@@ -16,7 +16,7 @@
 	month = oct,
 	number = {6804},
 	pages = {623--626},
-	title = {A marine microbial consortium apparently mediating anaerobic oxidation of methane},
+	title = {{A marine microbial consortium apparently mediating anaerobic oxidation of methane}},
 	url = {http://dx.doi.org/10.1038/35036572},
 	urldate = {2010-03-04},
 	volume = {407},
@@ -24,8 +24,7 @@
 }
 
 @article{oremland1992importance,
-	abstract = {Methane is a greenhouse gas whose concentration in the atmosphere is increasing 1-3. Much of this methane is derived from the metabolism of methane-generating (methanogenic) bacteria 4,5, and over the past two decades much has been learned about the ecology of methanogens; specific inhibitors of methanogenesis, such as 2- bromoethanesulphonic acid, have proved useful in this regard 6. In contrast, although much is known about the biochemistry of methane-oxidizing (methanotrophic) bacteria 7, ecological investigations have been hampered by the lack of an analogous specific inhibitor 6. Methanotrophs limit the flux of methane to the atmosphere from sediments 8,9 and consume atmospheric methane 10, but the quantitative importance of methanotrophy in the global methane budget is not well known 5. Methylfluoride {(CH3F)} is known to inhibit oxygen consumption by Methylococcus capsulatus 11, and to inhibit the oxidation of {(CH4)-C-14} to {(CO2)-C-14}, by endosymbionts in mussel gill tissues 12. Here 
-we report that methylfluoride {(MF)} inhibits the oxidation of methane by methane monooxygenase, and by using methylfluoride in field investigations, we find that methanotrophic bacteria can consume more than 90\% of the methane potentially available},
+	abstract = {Methane is a greenhouse gas whose concentration in the atmosphere is increasing 1-3. Much of this methane is derived from the metabolism of methane-generating (methanogenic) bacteria 4,5, and over the past two decades much has been learned about the ecology of methanogens; specific inhibitors of methanogenesis, such as 2- bromoethanesulphonic acid, have proved useful in this regard 6. In contrast, although much is known about the biochemistry of methane-oxidizing (methanotrophic) bacteria 7, ecological investigations have been hampered by the lack of an analogous specific inhibitor 6. Methanotrophs limit the flux of methane to the atmosphere from sediments 8,9 and consume atmospheric methane 10, but the quantitative importance of methanotrophy in the global methane budget is not well known 5. Methylfluoride {(CH3F)} is known to inhibit oxygen consumption by Methylococcus capsulatus 11, and to inhibit the oxidation of {(CH4)-C-14} to {(CO2)-C-14}, by endosymbionts in mussel gill tissues 12. Here we report that methylfluoride {(MF)} inhibits the oxidation of methane by methane monooxygenase, and by using methylfluoride in field investigations, we find that methanotrophic bacteria can consume more than 90\% of the methane potentially available},
 	author = {Ronald S. Oremland and Charles W. Culbertson},
 	doi = {10.1038/356421a0},
 	file = {Oremland\_Culbertson\_1992\_Nature.pdf:/home/angel/Documents/Literature/Zotero/storage/XBG3GX6G/Oremland\_Culbertson\_1992\_Nature.pdf:application/pdf},
@@ -34,7 +33,7 @@ we report that methylfluoride {(MF)} inhibits the oxidation of methane by methan
 	month = apr,
 	number = {6368},
 	pages = {421--423},
-	title = {Importance of methane-oxidizing bacteria in the methane budget as revealed by the use of a specific inhibitor},
+	title = {{Importance of methane-oxidizing bacteria in the methane budget as revealed by the use of a specific inhibitor}},
 	url = {http://dx.doi.org/10.1038/356421a0},
 	urldate = {2010-11-01},
 	volume = {356},
@@ -42,9 +41,7 @@ we report that methylfluoride {(MF)} inhibits the oxidation of methane by methan
 }
 
 @article{penning2006carbonisotope,
-	abstract = {In anoxic environments, microbial fermentation is the first metabolic process in the path of organic matter degradation. Since little is known about carbon isotope fractionation during microbial fermentation, we studied mixed-acid fermentation of different saccharides (glucose, cellobiose, and cellulose) in Clostridium papyrosolvens. The bacterium was grown anaerobically in batch under different growth conditions, both in pure culture and in co-culture with Methanobacterium bryantii utilizing {H2/CO2} or Methanospirillum hungatei utilizing both {H2/CO2} and formate. Fermentation products were acetate, lactate, ethanol, formate, H2, and {CO2} (and {CH4} in methanogenic co-culture), with acetate becoming dominant at low H2 partial pressures. After complete conversion of the saccharides, acetate was {13C-enriched} ([alpha]sacc/ac = 0.991-0.997), whereas lactate ([alpha]sacc/lac = 1.001-1.006), ethanol ([alpha]sacc/etoh = 1.007-1.013), and formate ([alpha]sacc/form = 1.007-1.011) were {13C-depleted.}
- The total inorganic carbon produced was only slightly enriched in {13C}, but was more enriched, when formate was produced in large amounts, as {12CO2} was preferentially converted with H2 to formate. During biomass formation, {12C} was slightly preferred ([alpha]sacc/biom [approximate] 1.002). The observations in batch culture were confirmed in glucose-limited chemostat culture at growth rates of 0.02-0.15 h-1 at both low and high hydrogen partial pressures. Our experiments showed that the carbon flow at metabolic branch points in the fermentation path governed carbon isotope fractionation to the accumulated products. During production of pyruvate, C isotopes were not fractionated when using cellulose, but were fractionated to different extents depending on growth conditions when using cellobiose or glucose. At the first catabolic branch point (pyruvate), the produced lactate was depleted in {13C}, whereas the alternative product acetyl-{CoA} was {13C} enriched. At the second branch point (acetyl-{CoA)}, 
-the ethanol formed was 15.6-18.6[per mille sign] depleted in {13C} compared to the alternative product acetate. At low hydrogen partial pressures, as normally observed under environmental conditions, fermentation of saccharides should mainly result in the production of acetate that is only slightly enriched in {13C} ({\textless}3[per mille sign]).},
+	abstract = {In anoxic environments, microbial fermentation is the first metabolic process in the path of organic matter degradation. Since little is known about carbon isotope fractionation during microbial fermentation, we studied mixed-acid fermentation of different saccharides (glucose, cellobiose, and cellulose) in Clostridium papyrosolvens. The bacterium was grown anaerobically in batch under different growth conditions, both in pure culture and in co-culture with Methanobacterium bryantii utilizing {H2/CO2} or Methanospirillum hungatei utilizing both {H2/CO2} and formate. Fermentation products were acetate, lactate, ethanol, formate, H2, and {CO2} (and {CH4} in methanogenic co-culture), with acetate becoming dominant at low H2 partial pressures. After complete conversion of the saccharides, acetate was {13C-enriched} ([alpha]sacc/ac = 0.991-0.997), whereas lactate ([alpha]sacc/lac = 1.001-1.006), ethanol ([alpha]sacc/etoh = 1.007-1.013), and formate ([alpha]sacc/form = 1.007-1.011) were {13C-depleted.} The total inorganic carbon produced was only slightly enriched in {13C}, but was more enriched, when formate was produced in large amounts, as {12CO2} was preferentially converted with H2 to formate. During biomass formation, {12C} was slightly preferred ([alpha]sacc/biom [approximate] 1.002). The observations in batch culture were confirmed in glucose-limited chemostat culture at growth rates of 0.02-0.15 h-1 at both low and high hydrogen partial pressures. Our experiments showed that the carbon flow at metabolic branch points in the fermentation path governed carbon isotope fractionation to the accumulated products. During production of pyruvate, C isotopes were not fractionated when using cellulose, but were fractionated to different extents depending on growth conditions when using cellobiose or glucose. At the first catabolic branch point (pyruvate), the produced lactate was depleted in {13C}, whereas the alternative product acetyl-{CoA} was {13C} enriched. At the second branch point (acetyl-{CoA)}, the ethanol formed was 15.6-18.6[per mille sign] depleted in {13C} compared to the alternative product acetate. At low hydrogen partial pressures, as normally observed under environmental conditions, fermentation of saccharides should mainly result in the production of acetate that is only slightly enriched in {13C} ({\textless}3[per mille sign]).},
 	author = {Holger Penning and Ralf Conrad},
 	doi = {10.1016/j.gca.2006.01.017},
 	file = {Penning\_Conrad\_2006\_Geochimica et Cosmochimica Acta.pdf:/home/angel/Documents/Literature/Zotero/storage/2WNGGKNV/Penning\_Conrad\_2006\_Geochimica et Cosmochimica Acta.pdf:application/pdf},
@@ -54,7 +51,7 @@ the ethanol formed was 15.6-18.6[per mille sign] depleted in {13C} compared to t
 	month = may,
 	number = {9},
 	pages = {2283--2297},
-	title = {Carbon isotope effects associated with mixed-acid fermentation of saccharides by \textit{Clostridium papyrosolvens}},
+	title = {{Carbon isotope effects associated with mixed-acid fermentation of saccharides by \textit{Clostridium papyrosolvens}}},
 	url = {http://www.sciencedirect.com/science/article/B6V66-4JFGFJF-3/2/9b5989328a1cea547a07d9298ae2ebb7},
 	urldate = {2010-07-01},
 	volume = {70},
@@ -62,9 +59,7 @@ the ethanol formed was 15.6-18.6[per mille sign] depleted in {13C} compared to t
 }
 
 @article{penning2007quantification,
-	abstract = {Rice fields are an important source for the greenhouse gas methane produced by acetoclastic and hydrogenotrophic methanogenesis. Fractionation of {13C/12C} can in principle be used to quantify the relative contribution of these pathways, but our knowledge of isotopic fractionation during reduction of {CO2} and turnover of acetate in different methanogenic environments is still scarce. We therefore measured {[delta]13C} signatures in two types of anoxic Italian rice field soils, one with high and one with low degradable organic matter {(OM)} content. Both soils were incubated in the presence and absence of methyl fluoride, a specific inhibitor of acetoclastic methanogenesis. Optimization of methyl fluoride concentration resulted in complete inhibition of acetoclastic methanogenesis. {CH4} was then exclusively produced by hydrogenotrophic methanogenesis, allowing determination of the isotopic signatures and fractionation factors specific for this methanogenic pathway. Acetate, which was then no 
-longer consumed, accumulated and was used for determination of the isotopic signature of the fermentatively produced acetate (both total acetate and methyl carbon of acetate). Hence, all isotopic signatures, including fractionation factors were determined for the methanogenic soil. These data, were then used for computation of the relative contribution of the two methanogenic pathways. In the high {OM} soil, the contribution of acetoclastic methanogenesis to total {CH4} production increased simultaneously with decreasing acetate concentration. In the low {OM} soil, methanogenesis from {H2/CO2} was clearly greater than theoretically expected. Furthermore, isotope fractionation of hydrogenotrophic methanogenesis indicated that the in situ energy status of methanogens strongly depended on the availability of organic carbon in the rice field soil system. Collectively, our data show that the study of isotopic fractionation in methanogenic environments allows a deeper insight into the ongoing processes, which may 
-be quite different in the same ecosystem with different content of degradable {OM.}},
+	abstract = {Rice fields are an important source for the greenhouse gas methane produced by acetoclastic and hydrogenotrophic methanogenesis. Fractionation of {13C/12C} can in principle be used to quantify the relative contribution of these pathways, but our knowledge of isotopic fractionation during reduction of {CO2} and turnover of acetate in different methanogenic environments is still scarce. We therefore measured {[delta]13C} signatures in two types of anoxic Italian rice field soils, one with high and one with low degradable organic matter {(OM)} content. Both soils were incubated in the presence and absence of methyl fluoride, a specific inhibitor of acetoclastic methanogenesis. Optimization of methyl fluoride concentration resulted in complete inhibition of acetoclastic methanogenesis. {CH4} was then exclusively produced by hydrogenotrophic methanogenesis, allowing determination of the isotopic signatures and fractionation factors specific for this methanogenic pathway. Acetate, which was then no longer consumed, accumulated and was used for determination of the isotopic signature of the fermentatively produced acetate (both total acetate and methyl carbon of acetate). Hence, all isotopic signatures, including fractionation factors were determined for the methanogenic soil. These data, were then used for computation of the relative contribution of the two methanogenic pathways. In the high {OM} soil, the contribution of acetoclastic methanogenesis to total {CH4} production increased simultaneously with decreasing acetate concentration. In the low {OM} soil, methanogenesis from {H2/CO2} was clearly greater than theoretically expected. Furthermore, isotope fractionation of hydrogenotrophic methanogenesis indicated that the in situ energy status of methanogens strongly depended on the availability of organic carbon in the rice field soil system. Collectively, our data show that the study of isotopic fractionation in methanogenic environments allows a deeper insight into the ongoing processes, which may be quite different in the same ecosystem with different content of degradable {OM.}},
 	author = {Holger Penning and Ralf Conrad},
 	doi = {10.1016/j.orggeochem.2007.08.004},
 	file = {Penning\_Conrad\_2007\_OrgGeochem.pdf:/home/angel/Documents/Literature/Zotero/storage/UMWZVXTC/Penning\_Conrad\_2007\_OrgGeochem.pdf:application/pdf},
@@ -74,7 +69,7 @@ be quite different in the same ecosystem with different content of degradable {O
 	month = dec,
 	number = {12},
 	pages = {2058--2069},
-	title = {Quantification of carbon flow from stable isotope fractionation in rice field soils with different organic matter content},
+	title = {{Quantification of carbon flow from stable isotope fractionation in rice field soils with different organic matter content}},
 	url = {http://www.sciencedirect.com/science/article/B6V7P-4PFW6B5-1/2/f6be26ee04a4bf8c72cfaabb4d6fb729},
 	urldate = {2010-07-01},
 	volume = {38},
@@ -82,8 +77,7 @@ be quite different in the same ecosystem with different content of degradable {O
 }
 
 @article{angel2012effectof,
-	abstract = {As atmospheric {CO2} levels continue to rise researchers now identify concomitant changes in plant biomass and diversity, which are postulated to alter the quality and quantity of the organic carbon entering the soil. In anoxic soils, {CH4} is the end product of the degradation of organic carbon and the system's terminal electron sink. Some soils (such as wetlands) are usually waterlogged and therefore constitute permanent {CH4} sources, while others (hydromorphic soils) are only occasionally saturated with water and alternate between acting as net {CH4} sources or sinks. Since methanogenesis is ultimately dependent on soil organic carbon, we hypothesized that a long term alteration of the latter will cause changes in type and magnitude of the former. To test this, we studied the effect of 10 years of atmospheric {CO2} enrichment on the methanogenic potential and community in a hydromorphic temperate grassland soil at the experimental Free Air Carbon dioxide Enrichment {(FACE)} site in Giessen, 
-Germany. While all soils demonstrated methanogenic potential, we detected no significant changes in {CH4} production rates, lag times, methanogenic pathways, diversity, or population sizes in soils that were exposed to either 20 or 30\% elevated ambient {CO2.} Our findings suggest that the methanogenic potential of the soil and the methanogenic community might be insensitive to changes in atmospheric {CO2} concentrations, at least not on a decadal timescale. Thus, if our results can be extrapolated to other temporarily flooded or even wetland ecosystems, the often-observed increase in {CH4} emissions under elevated {CO2} may simply be due to an increase in labile-C input via living root and increasing fresh litter deposition, but not due to shifts in the microbial population characteristics. This could make it easier to model and extrapolate the global effect of elevated {CO2} on terrestrial {CH4} emissions.},
+	abstract = {As atmospheric {CO2} levels continue to rise researchers now identify concomitant changes in plant biomass and diversity, which are postulated to alter the quality and quantity of the organic carbon entering the soil. In anoxic soils, {CH4} is the end product of the degradation of organic carbon and the system's terminal electron sink. Some soils (such as wetlands) are usually waterlogged and therefore constitute permanent {CH4} sources, while others (hydromorphic soils) are only occasionally saturated with water and alternate between acting as net {CH4} sources or sinks. Since methanogenesis is ultimately dependent on soil organic carbon, we hypothesized that a long term alteration of the latter will cause changes in type and magnitude of the former. To test this, we studied the effect of 10 years of atmospheric {CO2} enrichment on the methanogenic potential and community in a hydromorphic temperate grassland soil at the experimental Free Air Carbon dioxide Enrichment {(FACE)} site in Giessen, Germany. While all soils demonstrated methanogenic potential, we detected no significant changes in {CH4} production rates, lag times, methanogenic pathways, diversity, or population sizes in soils that were exposed to either 20 or 30\% elevated ambient {CO2.} Our findings suggest that the methanogenic potential of the soil and the methanogenic community might be insensitive to changes in atmospheric {CO2} concentrations, at least not on a decadal timescale. Thus, if our results can be extrapolated to other temporarily flooded or even wetland ecosystems, the often-observed increase in {CH4} emissions under elevated {CO2} may simply be due to an increase in labile-C input via living root and increasing fresh litter deposition, but not due to shifts in the microbial population characteristics. This could make it easier to model and extrapolate the global effect of elevated {CO2} on terrestrial {CH4} emissions.},
 	author = {Roey Angel and Claudia Kammann and Peter Claus and Ralf Conrad},
 	doi = {10.1016/j.soilbio.2012.04.010},
 	file = {Angel et al\_2012\_Soil Biol Biochem.pdf:/home/angel/Documents/Literature/Zotero/storage/6RBXZ4CH/Angel et al\_2012\_Soil Biol Biochem.pdf:application/pdf},
@@ -101,8 +95,7 @@ Germany. While all soils demonstrated methanogenic potential, we detected no sig
 }
 
 @article{angel2012methanogenic,
-	abstract = {The prototypical representatives of the Euryarchaeota{\textemdash}the methanogens{\textemdash}are oxygen sensitive and are thought to occur only in highly reduced, anoxic environments. However, we found methanogens of the genera Methanosarcina and Methanocella to be present in many types of upland soils (including dryland soils) sampled globally. These methanogens could be readily activated by incubating the soils as slurry under anoxic conditions, as seen by rapid methane production within a few weeks, without any additional carbon source. Analysis of the archaeal {16S} ribosomal {RNA} gene community profile in the incubated samples through terminal restriction fragment length polymorphism and quantification through quantitative {PCR} indicated dominance of Methanosarcina, whose gene copy numbers also correlated with methane production rates. Analysis of the {?13C} of the methane further supported this, as the dominant methanogenic pathway was in most cases aceticlastic, which Methanocella 
-cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reductase retrieved from the soil samples before incubation confirmed that Methanosarcina and Methanocella are the dominant methanogens, though some sequences of Methanobrevibacter and Methanobacterium were also detected. The global occurrence of only two active methanogenic archaea supports the hypothesis that these are autochthonous members of the upland soil biome and are well adapted to their environment.},
+	abstract = {The prototypical representatives of the Euryarchaeota{\textemdash}the methanogens{\textemdash}are oxygen sensitive and are thought to occur only in highly reduced, anoxic environments. However, we found methanogens of the genera Methanosarcina and Methanocella to be present in many types of upland soils (including dryland soils) sampled globally. These methanogens could be readily activated by incubating the soils as slurry under anoxic conditions, as seen by rapid methane production within a few weeks, without any additional carbon source. Analysis of the archaeal {16S} ribosomal {RNA} gene community profile in the incubated samples through terminal restriction fragment length polymorphism and quantification through quantitative {PCR} indicated dominance of Methanosarcina, whose gene copy numbers also correlated with methane production rates. Analysis of the {?13C} of the methane further supported this, as the dominant methanogenic pathway was in most cases aceticlastic, which Methanocella cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reductase retrieved from the soil samples before incubation confirmed that Methanosarcina and Methanocella are the dominant methanogens, though some sequences of Methanobrevibacter and Methanobacterium were also detected. The global occurrence of only two active methanogenic archaea supports the hypothesis that these are autochthonous members of the upland soil biome and are well adapted to their environment.},
 	author = {Roey Angel and Peter Claus and Ralf Conrad},
 	doi = {10.1038/ismej.2011.141},
 	file = {Angel et al\_2011\_ISME J.pdf:/home/angel/Documents/Literature/Zotero/storage/GT3RW9PA/Angel et al\_2011\_ISME J.pdf:application/pdf;Angel et al\_2012\_ISME J.pdf:/home/angel/Documents/Literature/Zotero/storage/TK7GMBFC/Angel et al\_2012\_ISME J.pdf:application/pdf},
@@ -111,7 +104,7 @@ cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reduc
 	keywords = {Archaea; Diversity; Drylands; Methanogenesis; Methanogens; Soil},
 	number = {4},
 	pages = {847--862},
-	title = {Methanogenic archaea are globally ubiquitous in aerated soils and become active under wet anoxic conditions},
+	title = {{Methanogenic archaea are globally ubiquitous in aerated soils and become active under wet anoxic conditions}},
 	url = {http://dx.doi.org/10.1038/ismej.2011.141},
 	urldate = {2011-12-05},
 	volume = {6},
@@ -127,7 +120,7 @@ cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reduc
 	keywords = {Algae; Fungi; History; Photosynthesis; Phylogeny; Plants; Soil},
 	number = {5532},
 	pages = {1129 --1133},
-	title = {Molecular Evidence for the Early Colonization of Land by Fungi and Plants},
+	title = {{Molecular Evidence for the Early Colonization of Land by Fungi and Plants}},
 	url = {http://www.sciencemag.org/content/293/5532/1129.abstract},
 	urldate = {2011-06-29},
 	volume = {293},
@@ -143,7 +136,7 @@ cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reduc
 	pages = {363--383},
 	publisher = {Springer-Verlag},
 	series = {{Ecological Studies}},
-	title = {Disturbance and recovery of biological soil crusts},
+	title = {{Disturbance and recovery of biological soil crusts}},
 	year = {2003}
 }
 
@@ -156,7 +149,7 @@ cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reduc
 	month = jun,
 	publisher = {Academic Press},
 	shorttitle = {Bacterial Biogeochemistry, Second Edition},
-	title = {Bacterial Biogeochemistry: The Ecophysiology of Mineral Cycling},
+	title = {{Bacterial Biogeochemistry: The Ecophysiology of Mineral Cycling}},
 	year = {1998}
 }
 
@@ -172,7 +165,7 @@ cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reduc
 	month = dec,
 	number = {12},
 	pages = {828--840},
-	title = {Microbial Life in the Phyllosphere},
+	title = {{Microbial Life in the Phyllosphere}},
 	url = {http://www.nature.com/nrmicro/journal/v10/n12/full/nrmicro2910.html?WT.ec_id=NRMICRO-201212},
 	urldate = {2012-11-22},
 	volume = {10},
@@ -180,8 +173,7 @@ cannot perform. Sequences of the key methanogenic enzyme methyl coenzyme M reduc
 }
 
 @article{oficteru2010combined,
-	abstract = {It has long been assumed that differences in the relative abundance of taxa in microbial communities reflect differences in environmental conditions. Here we show that in the economically and environmentally important microbial communities in a wastewater treatment plant, the population dynamics are consistent with neutral community assembly, where chance and random immigration play an important and predictable role in shaping the communities. Using dynamic observations, we demonstrate a straightforward calibration of a purely neutral model and a parsimonious method to incorporate environmental influence on the reproduction (or birth) rate of individual taxa. The calibrated model parameters are biologically plausible, with the population turnover and diversity in the heterotrophic community being higher than for the ammonia oxidizing bacteria {(AOB)} and immigration into {AOB} community being relatively higher. When environmental factors were incorporated more of the variance in the observations 
-could be explained but immigration and random reproduction and deaths remained the dominant driver in determining the relative abundance of the common taxa. Consequently we suggest that neutral community models should be the foundation of any description of an open biological system.},
+	abstract = {It has long been assumed that differences in the relative abundance of taxa in microbial communities reflect differences in environmental conditions. Here we show that in the economically and environmentally important microbial communities in a wastewater treatment plant, the population dynamics are consistent with neutral community assembly, where chance and random immigration play an important and predictable role in shaping the communities. Using dynamic observations, we demonstrate a straightforward calibration of a purely neutral model and a parsimonious method to incorporate environmental influence on the reproduction (or birth) rate of individual taxa. The calibrated model parameters are biologically plausible, with the population turnover and diversity in the heterotrophic community being higher than for the ammonia oxidizing bacteria {(AOB)} and immigration into {AOB} community being relatively higher. When environmental factors were incorporated more of the variance in the observations could be explained but immigration and random reproduction and deaths remained the dominant driver in determining the relative abundance of the common taxa. Consequently we suggest that neutral community models should be the foundation of any description of an open biological system.},
 	author = {Irina Dana {Ofi{\c t}eru} and Mary Lunn and Thomas P. Curtis and George F. Wells and Craig S. Criddle and Christopher A. Francis and William T. Sloan},
 	doi = {10.1073/pnas.1000604107},
 	file = {Ofi{\c t}eru et al\_2010\_Proc Natl Acad Sci USA.pdf:/home/angel/Documents/Literature/Zotero/storage/3T67TJKR/Ofi{\c t}eru et al\_2010\_Proc Natl Acad Sci USA.pdf:application/pdf},
@@ -192,7 +184,7 @@ could be explained but immigration and random reproduction and deaths remained t
 	month = aug,
 	number = {35},
 	pages = {15345--15350},
-	title = {Combined niche and neutral effects in a microbial wastewater treatment community},
+	title = {{Combined niche and neutral effects in a microbial wastewater treatment community}},
 	url = {http://www.pnas.org/content/107/35/15345},
 	urldate = {2012-11-27},
 	volume = {107},
